--- a/src/components/faq/faq.component.sass
+++ b/src/components/faq/faq.component.sass
@@ -1,5 +1,6 @@
 /*faq*/
 .faq
+    position: relative
     padding: 86px 0 106px
     +sm-block
         padding: 135px 0 115px
@@ -7,6 +8,23 @@
         padding: 94px 0 120px
     +lg-block
         padding: 94px 0 120px
+    &::after
+        content: ''
+        position: absolute
+        left: 50%
+        transform: translateX(-50%)
+        // bottom: -70%
+        bottom: -462px
+        
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+        +md-block
+            width: 442px
+            height: 442px
+        +lg-block
+            width: 442px
+            height: 442px
+
     .page__title-h2_small
         text-align: center
     .page__title-h3
@@ -14,7 +32,7 @@
         font-weight: 800
         font-size: 24px
         line-height: 125%
-        
+
         width: 75%
         margin: 9px auto 53px
         +sm-block
@@ -22,7 +40,7 @@
             margin-bottom: 32px
             line-height: 164%
         +md-block
-            width: 44%  
+            width: 44%
             font-size: 36px
             line-height: 164%
             margin-bottom: 54px
@@ -31,11 +49,11 @@
             font-size: 36px
             line-height: 164%
             margin-bottom: 54px
-       
+
         span
             color: #FF4C62
 
-.faqFlexContainer 
+.faqFlexContainer
     +row-flex
 .faqCol
     +col
@@ -45,15 +63,15 @@
 .faqItem
     margin-bottom: 16px
 
-.faqItemDetails 
+.faqItemDetails
     cursor: pointer
     &__Summary
         font-family: #{$SFUIText}-Regular
         border-bottom: 1px solid #fff
         font-size: 18px
         line-height: 133%
-        letter-spacing: 0.05em 
-       
+        letter-spacing: 0.05em
+
         color: #fff
         font-weight: bold
 
@@ -65,7 +83,7 @@
         .icon-arrow-white-details
             margin-top: 8px
             margin-right: 12px
-    
+
     &__Content
         display: none
         font-size: 15px
@@ -77,7 +95,7 @@
         color: #B2B2B2
         padding-top: 34px
     &.active
-        
+
         .faqItemDetails__Summary
             color: transparent
             background-image: linear-gradient(to right, #FF624A , #FF4686)
