--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -8,7 +8,7 @@ header.header
                 nav.headerNavLinks
                     a.headerLink(href="rs/rs.html") RS chip 
                     a.headerLink(href="gtr/gtr.html") GTR Chip 
-                    a.headerLink(href="chip/chip.html") Gas pedal 
+                    a.headerLink(href="chip/chip.html") Chip
                     a.headerLink(href="javascript:void(0)") Tuning 
                     a.headerLink(href="javascript:void(0)") Support 
                     a.headerLink(href="contacts/contacts.html") Contact us
