--- a/src/pages/chip/chip.pug
+++ b/src/pages/chip/chip.pug
@@ -10,16 +10,16 @@ block append style
 
 block content
 	main.page.pageChip
-		//- include ../../components/banner/bannerRs.component.pug
+		include ../../components/banner/bannerChip.component.pug
 		include ../../components/productBlocks/productChip/productAdvantagesChip.component.pug
-		include ../../components/productBlocks/productChip/power.component.pug
-		include ../../components/productBlocks/productChip/steps.component.pug
-		include ../../components/productBlocks/productChip/howitworkChip.component.pug
-		include ../../components/productBlocks/performance.component.pug
-		include ../../components/select/select.component.pug
-		include ../../components/productBlocks/productChip/optimizeBlockChip.component.pug
-		include ../../components/productBlocks/productChip/productSliderChip.component.pug
-		include ../../components/faq/faq.component.pug
+		//- include ../../components/productBlocks/productChip/power.component.pug
+		//- include ../../components/productBlocks/productChip/steps.component.pug
+		//- include ../../components/productBlocks/productChip/howitworkChip.component.pug
+		//- include ../../components/productBlocks/performance.component.pug
+		//- include ../../components/select/select.component.pug
+		//- include ../../components/productBlocks/productChip/optimizeBlockChip.component.pug
+		//- include ../../components/productBlocks/productChip/productSliderChip.component.pug
+		//- include ../../components/faq/faq.component.pug
 block modals
 	
 block append style
