--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -16,7 +16,8 @@
             width: 100%
          
         &_big
-            +shift-md-right(-9)
+            +shift-md-right(-12)
+            +shift-lg-right(-12)
             
     .pageText
         
@@ -42,12 +43,19 @@
     &.bannerRs
         .page__title-h1
             width: 200%
-        .bannerImg
-            position: relative
-            .chip
-                position: absolute
-                top: 25%
-                right: 30%
+    &.bannerGtr
+        .page__title-h1
+            width: 200%
+    &.bannerChip
+        .page__title-h1
+            width: 200%
+
+    .bannerImg
+        position: relative
+        .chip
+            position: absolute
+            top: 25%
+            right: 30%
 
 
 .bannerFlexContainer
