--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -13,11 +13,11 @@ header.header
                     a.headerLink(href="javascript:void(0)") Support 
                     a.headerLink(href="contacts/contacts.html") Contact us
                     a.headerLink(href="faq/faq.html") faq
-                .headerNavCart
+                a.headerNavCart(href="cart/cart.html") 
                     .icon-cart-png
                     .headerNavCart__count 3
                 .headerNavBtn
-                    a.page__btn(href="javascript:void(0)") Shop
+                    a.page__btn(href="shop/shop.html") Shop
                 .headerNavBurgerMenu
                     .line
                     .line
