--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -4,7 +4,7 @@
 
 .svg-iconArrowsLR {
 	@extend %svg-common;
-	background-position: 0 55.55555555555556%;
+	background-position: 72.88135593220339% 43.54838709677419%;
 }
 
 .svg-iconArrowsLR-box {
@@ -14,7 +14,7 @@
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 28.871391076115486% 55.05952380952381%;
+	background-position: 86.49289099526067% 70.66666666666667%;
 }
 
 .svg-iconArrowsUp-box {
@@ -22,9 +22,19 @@
 	height: 47px;
 }
 
+.svg-iconCPU {
+	@extend %svg-common;
+	background-position: 12.98076923076923% 85.51912568306011%;
+}
+
+.svg-iconCPU-box {
+	width: 56px;
+	height: 56px;
+}
+
 .svg-iconCar {
 	@extend %svg-common;
-	background-position: 36.71232876712329% 15.548780487804878%;
+	background-position: 57.389162561576356% 13.896457765667575%;
 }
 
 .svg-iconCar-box {
@@ -34,7 +44,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 99.21875% 27.083333333333332%;
+	background-position: 30.823529411764707% 52.8%;
 }
 
 .svg-iconCart-box {
@@ -44,7 +54,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 43.79947229551451% 70.99697885196375%;
+	background-position: 52.857142857142854% 84.5945945945946%;
 }
 
 .svg-iconChat-box {
@@ -54,7 +64,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 85.97883597883597% 66.36363636363636%;
+	background-position: 99.28400954653938% 59.34959349593496%;
 }
 
 .svg-iconChatGray-box {
@@ -64,7 +74,7 @@
 
 .svg-iconChip {
 	@extend %svg-common;
-	background-position: 17.72853185595568% 0;
+	background-position: 21.64179104477612% 16.666666666666668%;
 }
 
 .svg-iconChip-box {
@@ -74,7 +84,7 @@
 
 .svg-iconChipGray {
 	@extend %svg-common;
-	background-position: 0 88.48484848484848%;
+	background-position: 99.28400954653938% 73.71273712737127%;
 }
 
 .svg-iconChipGray-box {
@@ -84,7 +94,7 @@
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 71.50537634408602% 0;
+	background-position: 0 69.97245179063361%;
 }
 
 .svg-iconChipWhite-box {
@@ -94,7 +104,7 @@
 
 .svg-iconCloud {
 	@extend %svg-common;
-	background-position: 0 38.3177570093458%;
+	background-position: 57.389162561576356% 29.444444444444443%;
 }
 
 .svg-iconCloud-box {
@@ -104,7 +114,7 @@
 
 .svg-iconCompareChart {
 	@extend %svg-common;
-	background-position: 14.4% 71.42857142857143%;
+	background-position: 26.442307692307693% 85.05434782608695%;
 }
 
 .svg-iconCompareChart-box {
@@ -114,7 +124,7 @@
 
 .svg-iconDesktop {
 	@extend %svg-common;
-	background-position: 55.0408719346049% 0;
+	background-position: 73.77450980392157% 0;
 }
 
 .svg-iconDesktop-box {
@@ -124,7 +134,7 @@
 
 .svg-iconDynoChart {
 	@extend %svg-common;
-	background-position: 29.333333333333332% 70.99697885196375%;
+	background-position: 39.90384615384615% 84.5945945945946%;
 }
 
 .svg-iconDynoChart-box {
@@ -134,7 +144,7 @@
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 98.44961240310077% 65.89595375722543%;
+	background-position: 70.32710280373831% 55.064935064935064%;
 }
 
 .svg-iconEmailGray-box {
@@ -144,7 +154,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 53.317535545023695% 68.27956989247312%;
 }
 
 .svg-iconEmailGray2-box {
@@ -154,7 +164,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 71.12299465240642% 33.433734939759034%;
+	background-position: 28.19277108433735% 68.46361185983828%;
 }
 
 .svg-iconEmalPurple-box {
@@ -164,7 +174,7 @@
 
 .svg-iconErrors {
 	@extend %svg-common;
-	background-position: 18.08219178082192% 37.61467889908257%;
+	background-position: 0 54.09836065573771%;
 }
 
 .svg-iconErrors-box {
@@ -174,7 +184,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 57.605985037406484% 53.46820809248555%;
+	background-position: 43.89140271493213% 96.1038961038961%;
 }
 
 .svg-iconFacebookGray-box {
@@ -184,7 +194,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 50% 53.77906976744186%;
+	background-position: 85.26077097505669% 81.72323759791122%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -194,7 +204,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 54.44743935309973% 17.771084337349397%;
+	background-position: 73.05825242718447% 15.902964959568733%;
 }
 
 .svg-iconFreeShipping-box {
@@ -204,7 +214,7 @@
 
 .svg-iconFuel {
 	@extend %svg-common;
-	background-position: 70% 49.693251533742334%;
+	background-position: 86.69833729216153% 0;
 }
 
 .svg-iconFuel-box {
@@ -212,9 +222,39 @@
 	height: 57px;
 }
 
+.svg-iconFuelGray {
+	@extend %svg-common;
+	background-position: 86.49289099526067% 15.405405405405405%;
+}
+
+.svg-iconFuelGray-box {
+	width: 50px;
+	height: 52px;
+}
+
+.svg-iconGTR {
+	@extend %svg-common;
+	background-position: 0 16.343490304709142%;
+}
+
+.svg-iconGTR-box {
+	width: 84px;
+	height: 61px;
+}
+
+.svg-iconGTRWhite {
+	@extend %svg-common;
+	background-position: 22.422680412371133% 0;
+}
+
+.svg-iconGTRWhite-box {
+	width: 84px;
+	height: 61px;
+}
+
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 36.0655737704918% 36.82634730538922%;
+	background-position: 16.216216216216218% 53.083109919571044%;
 }
 
 .svg-iconHybrEng-box {
@@ -224,7 +264,7 @@
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 35.944700460829495% 96.35416666666667%;
 }
 
 .svg-iconInstagramGray-box {
@@ -234,7 +274,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 40.92071611253197% 53.93586005830904%;
+	background-position: 73.14814814814815% 66.49214659685863%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -244,7 +284,7 @@
 
 .svg-iconKeyboard {
 	@extend %svg-common;
-	background-position: 36.91460055096419% 0;
+	background-position: 57.67326732673267% 0;
 }
 
 .svg-iconKeyboard-box {
@@ -254,7 +294,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 97.44245524296676% 40.828402366863905%;
+	background-position: 31.01851851851852% 31.83023872679045%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -264,7 +304,7 @@
 
 .svg-iconMarkLocationGray2 {
 	@extend %svg-common;
-	background-position: 56.770833333333336% 70.99697885196375%;
+	background-position: 85.88235294117646% 29.45945945945946%;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -274,7 +314,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 84.85639686684073% 17.073170731707318%;
+	background-position: 98.11320754716981% 15.258855585831062%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -284,7 +324,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 0 34.883720930232556%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -294,7 +334,7 @@
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 99.73821989528795% 14.619883040935672%;
+	background-position: 98.3451536643026% 85.30183727034121%;
 }
 
 .svg-iconMarker-box {
@@ -304,7 +344,7 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 0 72.08588957055214%;
+	background-position: 0 85.75342465753425%;
 }
 
 .svg-iconPatent-box {
@@ -314,7 +354,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 96.7005076142132% 54.142011834319526%;
+	background-position: 40% 31.83023872679045%;
 }
 
 .svg-iconPhoneGray-box {
@@ -324,7 +364,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 67.94871794871794% 70.99697885196375%;
+	background-position: 84.68677494199535% 43.513513513513516%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -334,7 +374,7 @@
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 86.66666666666667% 0;
+	background-position: 100% 0;
 }
 
 .svg-iconPhonePurple-box {
@@ -344,7 +384,7 @@
 
 .svg-iconPhoneWhite {
 	@extend %svg-common;
-	background-position: 13.58974358974359% 88.21752265861028%;
+	background-position: 84.68677494199535% 57.567567567567565%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -354,7 +394,7 @@
 
 .svg-iconPinion {
 	@extend %svg-common;
-	background-position: 86.20689655172414% 33.73860182370821%;
+	background-position: 99.52153110047847% 30.16304347826087%;
 }
 
 .svg-iconPinion-box {
@@ -364,7 +404,7 @@
 
 .svg-iconPower {
 	@extend %svg-common;
-	background-position: 86.20689655172414% 50.151975683890576%;
+	background-position: 99.52153110047847% 44.83695652173913%;
 }
 
 .svg-iconPower-box {
@@ -372,9 +412,29 @@
 	height: 54px;
 }
 
+.svg-iconRS {
+	@extend %svg-common;
+	background-position: 0 0;
+}
+
+.svg-iconRS-box {
+	width: 87px;
+	height: 59px;
+}
+
+.svg-iconRSResponse {
+	@extend %svg-common;
+	background-position: 41.707317073170735% 0;
+}
+
+.svg-iconRSResponse-box {
+	width: 62px;
+	height: 81px;
+}
+
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 24.80211081794195% 88.21752265861028%;
+	background-position: 65.23809523809524% 84.5945945945946%;
 }
 
 .svg-iconReturnCircle-box {
@@ -384,7 +444,7 @@
 
 .svg-iconRudder {
 	@extend %svg-common;
-	background-position: 15.526315789473685% 55.55555555555556%;
+	background-position: 41.33016627078385% 68.27956989247312%;
 }
 
 .svg-iconRudder-box {
@@ -394,7 +454,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 17.94871794871795% 22.80701754385965%;
+	background-position: 63.80510440835267% 66.66666666666667%;
 }
 
 .svg-iconSearch-box {
@@ -404,7 +464,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 38.32020997375328% 88.21752265861028%;
+	background-position: 77.25118483412322% 84.5945945945946%;
 }
 
 .svg-iconShield-box {
@@ -414,7 +474,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 51.715039577836414% 88.21752265861028%;
+	background-position: 0 100%;
 }
 
 .svg-iconSpeed-box {
@@ -424,7 +484,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 65.4353562005277% 88.21752265861028%;
+	background-position: 12.380952380952381% 100%;
 }
 
 .svg-iconSpeedometer-box {
@@ -434,7 +494,7 @@
 
 .svg-iconSpeedometerGray {
 	@extend %svg-common;
-	background-position: 79.15567282321899% 88.21752265861028%;
+	background-position: 24.761904761904763% 100%;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -444,7 +504,7 @@
 
 .svg-iconSpeedometrLight {
 	@extend %svg-common;
-	background-position: 54.44743935309973% 33.23262839879154%;
+	background-position: 73.05825242718447% 29.72972972972973%;
 }
 
 .svg-iconSpeedometrLight-box {
@@ -454,7 +514,7 @@
 
 .svg-iconUnlimit {
 	@extend %svg-common;
-	background-position: 0 23.076923076923077%;
+	background-position: 15.92039800995025% 31.83023872679045%;
 }
 
 .svg-iconUnlimit-box {
@@ -464,7 +524,7 @@
 
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 71.31367292225201% 17.82477341389728%;
+	background-position: 14.251207729468598% 68.64864864864865%;
 }
 
 .svg-iconWheel-box {
@@ -474,7 +534,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 97.94344473007712% 87.31988472622479%;
+	background-position: 41.395348837209305% 51.295336787564764%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -484,7 +544,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 98.44961240310077% 76.81159420289855%;
+	background-position: 39.953271028037385% 21.09375%;
 }
 
 .svg-iconYoutubeWhite-box {
