--- a/src/components/products/products.component.pug
+++ b/src/components/products/products.component.pug
@@ -1,29 +1,31 @@
 //-products
-mixin item(titelH3, textBefore, imgSrc, productsItemGains, textAfter, textBtn1)
-    .productsItem
-        h3.productsItemTitle=titelH3
-        p.productsItemTextBefore=textBefore
-        img.productsItemImg(src=imgSrc, alt="product")
-
-       
-        .productsItemGain
-            each gain in productsItemGains
-                .productsItemGain__text
-                    div.text up to
-                    div.number=gain.number
-                    div.text=gain.text
-
-        
-        p.productsItemTextAfter=textAfter
-        .productsItemActions 
-            button.page__btn LEARN MORE
-            button.page__btn.page__btn_notTransparent=textBtn1
+include ./products.mixin.pug
 
 section.products 
     h2.page__title-h2.page__title-h2_big shop 
         span.page__title-h2_small.page__title-h2_absolute Product
     .wrapper
         .productsFlexContainer
-            flex-wrap: nowrap
-            +item("Performance Tuning", "Engine tuning on your smartphone with free IOS/Android apps", "assets/images/png/product1.png", [{"number": "+20%", "text": "Power"}, {"number": "+20%", "text": "Torque"}],"Comaptibility : ICE and hybrids engines", "USD 249")
-            +item("Gas Pedal Tuning", "Improve your acceleration, and customize your driving dynamic", "assets/images/png/product2.png", [{"number": "+10%", "text": "Faster Acceleration"}],"Comaptibility : ICE and hybrids engines", "USD 249")
+            +item([
+                {
+                    "title":"Performance Tuning",
+                    "textBefore":"Engine tuning on your smartphone with free IOS/Android apps",
+                    "imgSrc":"assets/images/png/product1.png",
+                    "productsItemGains": [
+                        {"number": "+20%", "text": "Power"}, 
+                        {"number": "+20%", "text": "Torque"}
+                    ],
+                    "textAfter":"Comaptibility : ICE and hybrids engines",
+                    "textBtn":"USD 249"
+                },
+                {
+                    "title":"Gas Pedal Tuning",
+                    "textBefore":"Improve your acceleration, and customize your driving dynamic",
+                    "imgSrc":"assets/images/png/product2.png",
+                    "productsItemGains": [
+                        {"number": "+10%", "text": "Faster Acceleration"}
+                    ],
+                    "textAfter":"Comaptibility : ICE and hybrids engines",
+                    "textBtn":"USD 249"
+                }
+            ])
