--- a/src/components/products/productsCart.component.pug
+++ b/src/components/products/productsCart.component.pug
@@ -1,29 +1,110 @@
 //-products
-mixin item(titelH3, textBefore, imgSrc, productsItemGains, textAfter, textBtn1)
-    .productsItem
-        h3.productsItemTitle=titelH3
-        p.productsItemTextBefore=textBefore
-        img.productsItemImg(src=imgSrc, alt="product")
+include ./products.mixin.pug
 
-       
-        .productsItemGain
-            each gain in productsItemGains
-                .productsItemGain__text
-                    div.text up to
-                    div.number=gain.number
-                    div.text=gain.text
-
-        
-        p.productsItemTextAfter=textAfter
-        .productsItemActions 
-            button.page__btn LEARN MORE
-            button.page__btn.page__btn_notTransparent=textBtn1
-
-section.products 
+section.products.productsCart
+    .productsBg
+        img(src="assets/images/png/imgShopBg.png", alt="imgShopBg")
     h2.page__title-h2.page__title-h2_big shop 
-        span.page__title-h2_small.page__title-h2_absolute Product
+        span.page__title-h2_small.page__title-h2_absolute Get Started
+    .productsTabs
+        .productsTabsItem
+            .productsTabsItem__icon 
+                .svg-iconRS.svg-iconRS-box
+            .productsTabsItem__text RS
+
+        .productsTabsItem
+            .productsTabsItem__icon 
+                .svg-iconGTRWhite.svg-iconGTRWhite-box
+            .productsTabsItem__text GTR
+
+        .productsTabsItem
+            .productsTabsItem__icon 
+                .svg-iconRSResponse.svg-iconRSResponse-box
+            .productsTabsItem__text RS response
+    
+
     .wrapper
         .productsFlexContainer
-            flex-wrap: nowrap
-            +item("Performance Tuning", "Engine tuning on your smartphone with free IOS/Android apps", "assets/images/png/product1.png", [{"number": "+20%", "text": "Power"}, {"number": "+20%", "text": "Torque"}],"Comaptibility : ICE and hybrids engines", "USD 249")
-            +item("Gas Pedal Tuning", "Improve your acceleration, and customize your driving dynamic", "assets/images/png/product2.png", [{"number": "+10%", "text": "Faster Acceleration"}],"Comaptibility : ICE and hybrids engines", "USD 249")
+            .productsItem.productsItemCart
+                .productsItemCartLabel BEST SELLER
+                h3.productsItemCartTitle RS
+                p.productsItemCartTextBefore Engine tuning on your smartphone with free IOS/Android apps
+                img.productsItemCartImg(src="assets/images/png/productCart1.png", alt="product")
+
+            
+                .productsItemCartGain
+                    .productsItemCartGainTitle up to +20%
+                    .productsItemCartGainDesc 
+                        div Power 
+                        div Torque
+                    ul 
+                        li ICE end hybrid engiens 
+                        li iOS, Android apps 
+                        li 18%* fuel saving 
+                        li 3 driving modes
+
+                .productsItemCartActions
+                    .productPrice $229
+                    button.page__btn.page__btn_notTransparent ADD TO BAG
+
+            .productsItem.productsItemCart
+                .productsItemCartLabel BEST SELLER
+                h3.productsItemCartTitle Gtr
+                p.productsItemCartTextBefore Tune your engine and dispaly car readings on 3.5 inch touch screen
+                img.productsItemCartImg(src="assets/images/png/productCart2.png", alt="product")
+
+            
+                .productsItemCartGain
+                    .productsItemCartGainTitle up to +25%
+                    .productsItemCartGainDesc 
+                        div Power 
+                        div Torque
+                    ul 
+                        li ICE end hybrid engiens 
+                        li PC programmer 
+                        li 18%* fuel saving 
+                        li 6 driving modes 
+
+                .productsItemCartActions
+                    .productPrice $369
+                    button.page__btn.page__btn_notTransparent ADD TO BAG
+
+            .productsItem.productsItemCart.productsItemCart__Big
+                .productsItemCart__text
+                    h3.productsItemCartTitle RS RESPONSE gas pedal tuning
+                    p.productsItemCartTextBefore 
+                        span +10%
+                        | Better acceleration
+
+                .productsItemCart__img
+                    img.productsItemCartImg(src="assets/images/png/productCart3.png", alt="product")
+                .productsCartAdvatages
+                    .productsCartAdvatagesItem 
+                        .productsCartAdvatagesItem__icon
+                            .svg-iconSpeedometerGray.svg-iconSpeedometerGray-box 
+                        .productsCartAdvatagesItem__text
+                            h5.productsCartAdvatagesItem__title Compatiable with all modern cars
+                            p Electronic throttle controller works with ICE. BEV and hybridengines
+                    .productsCartAdvatagesItem 
+                        .productsCartAdvatagesItem__icon
+                            .svg-iconFuelGray.svg-iconFuelGray-box 
+                        .productsCartAdvatagesItem__text
+                            h5.productsCartAdvatagesItem__title Better throttle response
+                            p Save 10-18%* More fuel on Eco mode
+                    .productsCartAdvatagesItem 
+                        .productsCartAdvatagesItem__icon
+                            .svg-iconFuelGray.svg-iconFuelGray-box 
+                        .productsCartAdvatagesItem__text
+                            h5.productsCartAdvatagesItem__title 5 driving stages
+                            p Free Companion app with an access to our tuning database
+                    .productsCartAdvatagesItem 
+                        .productsCartAdvatagesItem__icon
+                            .svg-iconCPU.svg-iconCPU-box 
+                        .productsCartAdvatagesItem__text
+                            h5.productsCartAdvatagesItem__title Back CPU for the safest ride
+                            p Change your vehicle and tune right from the phone anytime
+
+
+                .productsItemCartActions
+                    .productPrice $369
+                    button.page__btn.page__btn_notTransparent ADD TO BAG
