--- a/src/components/products/products.component.sass
+++ b/src/components/products/products.component.sass
@@ -18,6 +18,8 @@
             margin-bottom: 30px
         +lg-block
             margin-bottom: 30px
+    &.productsCart
+        padding-bottom: 0
 
 .productsCart
     background: #000
