--- a/src/pages/shop/shop.pug
+++ b/src/pages/shop/shop.pug
@@ -11,6 +11,9 @@ block append style
 block content
 	main.page.pageShop
 		include ../../components/products/productsCart.component.pug
+		.wrapper 
+			div.pageShop__textAfter * Real world gains may be less or more depending on a large number of contributing factors such as displacement, aspiration and selected tuning mode
+		include ../../components/addToCart/addToCart.component.pug
 block modals
 	
 block append style
