--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,3 +1,42 @@
+/*addToCart*/
+.addToCart
+
+.addToCartContainer
+    +size(9)
+    +size-md(7.4)
+    +size-lg(7.4)
+
+    display: flex
+    flex-direction: column
+    +sm-block
+        flex-direction: row
+    +md-block
+        flex-direction: row
+    +lg-block
+        flex-direction: row
+    align-items: center
+    justify-content: space-between
+
+    color: #000000
+    background: #FFFFFF
+
+    padding: 11px 30px
+    border-radius: 15px
+   
+    margin: 0 auto 11px
+    box-sizing: border-box
+    div
+        font-size: 15px
+        line-height: 26px
+
+    .page__btn
+        border-radius: 8px
+        height: 28px
+
+.addToCartPrice
+    font-family: #{$SFUIDisplay}-Bold
+    font-size: 18px
+    line-height: 59px
 /*banner*/
 .banner
     position: relative
@@ -1779,6 +1818,8 @@ html
             margin-bottom: 30px
         +lg-block
             margin-bottom: 30px
+    &.productsCart
+        padding-bottom: 0
 
 .productsCart
     background: #000
