--- a/src/pages/order/order.pug
+++ b/src/pages/order/order.pug
@@ -4,20 +4,23 @@ block base
 	base(href="../")
 
 block title
-	title Order
+	title Cart
 
 block append style
 
 block content
-	main.page.pageShop
-		div Order
+	main.page.pageCart.pageOrder
+		.wrapper
+			.pageCartTitle
+				h2.page__title-h2.page__title-h2_big ORDERS 
+					span.page__title-h2_small.page__title-h2_absolute Shopping
+				h3 Shipping Information 
+			.cartTable
+				include ../../components/cartForm/cartForm.component.pug
+				include ../../components/cartDetails/cartDetails.component.pug
+
 block modals
 	
 block append style
-	link(rel="stylesheet", href="libs/css/swiper-bundle.min.css", type="text/css")
-      
 
 block append script
-	script(src="libs/js/swiper-bundle.min.js")
-	script(src="js/productBlocks/productSlider.component.js")
-	script(src="js/faq/faq.component.js")
