--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -44,7 +44,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 30.823529411764707% 52.8%;
+	background-position: 41.411764705882355% 52.8%;
 }
 
 .svg-iconCart-box {
@@ -512,6 +512,16 @@
 	height: 52px;
 }
 
+.svg-iconTrash {
+	@extend %svg-common;
+	background-position: 30.679156908665107% 53.083109919571044%;
+}
+
+.svg-iconTrash-box {
+	width: 45px;
+	height: 49px;
+}
+
 .svg-iconUnlimit {
 	@extend %svg-common;
 	background-position: 15.92039800995025% 31.83023872679045%;
@@ -534,7 +544,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 41.395348837209305% 51.295336787564764%;
+	background-position: 51.86046511627907% 51.295336787564764%;
 }
 
 .svg-iconYoutubeGray-box {
