--- a/src/components/modals/modalGallary.component.pug
+++ b/src/components/modals/modalGallary.component.pug
@@ -1,5 +1,5 @@
 //-modalGallary
-+modal("modalGallary", "modalGallary")
++modal("modalGallary")
     .sliderBtn
         button.btnSlider.prev 
             i.icon-arrow-left
