--- a/src/components/modals/modalNews.component.pug
+++ b/src/components/modals/modalNews.component.pug
@@ -1,5 +1,5 @@
 //-modalNews
-+modal("modalNews", "modalNews")
++modal("modalNews")
     
     h3.modalTitle BMW M5 tuned by RS chip at our dealer’s car repair shop
     .modalDate 12 june 2021
