--- a/src/components/productBlocks/productAdvantages.component.sass
+++ b/src/components/productBlocks/productAdvantages.component.sass
@@ -1,5 +1,7 @@
 /*advantages*/
 .advantages
+    position: relative
+    background: #000
     padding: 10px
     +md-block
         padding: 84px 0 63px
