--- a/src/components/select/select.component.pug
+++ b/src/components/select/select.component.pug
@@ -1,12 +1,31 @@
 //-select
-#like_button_container
+mixin SelectBox(name, options)
+  .select-box
+    .select-box__current(tabindex="1")
+        .select-box__value
+            input.select-box__input(type="radio" id=`id_${name}` value=name name=name checked)
+            p.select-box__input-text=name
+        each option, index in options
+            .select-box__value
+                input.select-box__input(type="radio" id=`id_${name}_name_${option}_idx_${index}` value=option.name name=name )
+                p.select-box__input-text #{option}
+        .svg-iconArrowSelect.svg-iconArrowSelect-box
+    ul.select-box__list
+        each option, index in options
+            li
+                label.select-box__option(for=`id_${name}_name_${option}_idx_${index}` aria-hidden) #{option}
+        
+
+
 .selectBox 
     .selectBoxText Find out how many Horsepowers you can add to your Car
     .selectBoxContainer
-        .select Mercedes
-        .select Model
-        .select Modification
+        .select 
+            +SelectBox('Brands', ['Acura','Alfa Romeo','Alpina','Aston Martin','Audi','BAIC'])
+        .select 
+            +SelectBox('Model', ['CL','MDX','RDX','RSX','TL','TLX', 'ZDX'])
+        .select
+            +SelectBox('Modification', ['3.5i V6 24V 263HP 339NM','3.5i V6 24V 240HP 332NM','3.7i V6 305HP 370NM','II 3.7i V6 300HP 372NM','III 3.5i V6 24V 290HP 267NM'])
         .selectBoxSearch
             .svg-iconSearch.svg-iconSearch-box
-    a.selectBoxLink Can’t find my Car
-
+    a.selectBoxLink.js-open-modal(href="javascript:void(0)" data-modal="modalCarCantfind") Can’t find my Car
