--- a/src/pages/rs/rs.pug
+++ b/src/pages/rs/rs.pug
@@ -20,6 +20,7 @@ block content
 		//- include ../../components/productBlocks/productRs/productSliderRs.component.pug
 		//- include ../../components/faq/faq.component.pug
 block modals
+	include ../../components/modals/modalCarCantfind.component.pug
 	
 block append style
 	link(rel="stylesheet", href="libs/css/swiper-bundle.min.css", type="text/css")
