--- a/src/pug/mixins/modal-mixin.pug
+++ b/src/pug/mixins/modal-mixin.pug
@@ -1,6 +1,6 @@
 //-modal-mixin
-mixin modal(dataModalName, dataModalClass)
-    section.modal(data-modal=dataModalName class=dataModalClass ) 
+mixin modal(dataModalName)
+    section.modal(data-modal=dataModalName class=dataModalName ) 
         button.modalClose.icon-close.js-modal-close
         .modalContent 
             block
