--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -28,9 +28,109 @@
     border: 1.5px solid rgba(255, 255, 255, 0.15)
     box-sizing: border-box
     border-radius: 15px
-    padding: 20px 25px
+    // padding: 20px 25px
     .select
         font-size: 15px
         line-height: 29px
         border-right: 1px solid rgba(255, 255, 255, 0.15)
         min-width: 178px
+
+.select-box
+    position: relative
+    display: block
+    width: 100%
+    margin: 0 auto
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif
+    font-size: 18px
+    color: #fff
+
+    &__current
+        position: relative
+        box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
+        cursor: pointer
+        outline: none
+        display: flex
+        align-items: center
+
+        &:focus
+            & + .select-box__list
+                opacity: 1
+
+                animation-name: none
+
+                .select-box__option
+                    cursor: pointer
+
+            .select-box__icon
+                transform: translateY(-50%) rotate(180deg)
+
+    &__icon
+        position: absolute
+        top: 50%
+        right: 15px
+        transform: translateY(-50%)
+        width: 20px
+        opacity: 0.3
+        transition: 0.2s ease
+
+    &__value
+        display: flex
+
+    &__input
+        display: none
+
+        &:checked + .select-box__input-text
+            display: block
+
+    &__input-text
+        display: none
+        width: 100%
+        margin: 0
+        padding: 15px
+        background-color: transparent
+
+    &__list
+
+        max-height: 200px
+        overflow: scroll
+
+        position: absolute
+        top: 63px
+        left: 0
+        z-index: 100
+        width: 100%
+        padding: 0
+        list-style: none
+        opacity: 0
+
+        animation-name: HideList
+        animation-duration: 0.5s
+        animation-delay: 0.5s
+        animation-fill-mode: forwards
+        animation-timing-function: step-start
+        box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
+
+        // background: rgba(255, 255, 255, 0.15)
+        background: #000
+        backdrop-filter: blur(35px)
+        border: 1.5px solid rgba(255, 255, 255, 0.15)
+     
+
+
+    &__option
+        display: block
+        padding: 15px
+        // background-color: #fff
+        background: rgba(255, 255, 255, 0.15)
+
+        &:hover,
+        &:focus
+            color: #546c84
+            background-color: #fbfbfb
+
+@keyframes HideList
+    from
+        transform: scaleY(1)
+
+    to
+        transform: scaleY(0)
