--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -40,7 +40,7 @@
 /*banner*/
 .banner
     position: relative
-    overflow: hidden
+    // overflow: hidden
     
     .page__title-h1
        
@@ -1290,6 +1290,32 @@ html
             
             z-index: 10
 
+.modalCarCantfind 
+    text-align: center
+    .page__btn
+        color: #000
+    p
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 18px
+        line-height: 59px
+    form 
+        margin-bottom: 10%
+    .formRow
+        +row-flex
+        align-items: center
+        margin-bottom: 5%
+    img 
+        margin: 0
+
+    .page__input
+        +col
+        +size(9)
+        +size-md(2)
+        +size-lg(2)
+        &:first-child
+            flex-grow: 1
+
+
 .modalContent
     overflow: scroll
     height: inherit
@@ -1665,6 +1691,8 @@ html
 
 /*advantages*/
 .advantages
+    position: relative
+    background: #000
     padding: 10px
     +md-block
         padding: 84px 0 63px
@@ -2377,12 +2405,113 @@ html
     border: 1.5px solid rgba(255, 255, 255, 0.15)
     box-sizing: border-box
     border-radius: 15px
-    padding: 20px 25px
+    // padding: 20px 25px
     .select
         font-size: 15px
         line-height: 29px
         border-right: 1px solid rgba(255, 255, 255, 0.15)
         min-width: 178px
+
+.select-box
+    position: relative
+    display: block
+    width: 100%
+    margin: 0 auto
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif
+    font-size: 18px
+    color: #fff
+
+    &__current
+        position: relative
+        box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
+        cursor: pointer
+        outline: none
+        display: flex
+        align-items: center
+
+        &:focus
+            & + .select-box__list
+                opacity: 1
+
+                animation-name: none
+
+                .select-box__option
+                    cursor: pointer
+
+            .select-box__icon
+                transform: translateY(-50%) rotate(180deg)
+
+    &__icon
+        position: absolute
+        top: 50%
+        right: 15px
+        transform: translateY(-50%)
+        width: 20px
+        opacity: 0.3
+        transition: 0.2s ease
+
+    &__value
+        display: flex
+
+    &__input
+        display: none
+
+        &:checked + .select-box__input-text
+            display: block
+
+    &__input-text
+        display: none
+        width: 100%
+        margin: 0
+        padding: 15px
+        background-color: transparent
+
+    &__list
+
+        max-height: 200px
+        overflow: scroll
+
+        position: absolute
+        top: 63px
+        left: 0
+        z-index: 100
+        width: 100%
+        padding: 0
+        list-style: none
+        opacity: 0
+
+        animation-name: HideList
+        animation-duration: 0.5s
+        animation-delay: 0.5s
+        animation-fill-mode: forwards
+        animation-timing-function: step-start
+        box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
+
+        // background: rgba(255, 255, 255, 0.15)
+        background: #000
+        backdrop-filter: blur(35px)
+        border: 1.5px solid rgba(255, 255, 255, 0.15)
+     
+
+
+    &__option
+        display: block
+        padding: 15px
+        // background-color: #fff
+        background: rgba(255, 255, 255, 0.15)
+
+        &:hover,
+        &:focus
+            color: #546c84
+            background-color: #fbfbfb
+
+@keyframes HideList
+    from
+        transform: scaleY(1)
+
+    to
+        transform: scaleY(0)
+
 /*social*/
 .social
     position: relative
@@ -2471,224 +2600,6 @@ html
        
     .icon
         margin: 0 15px
-.accomplishments
-    padding: 60px 0
-    position: relative
-    .page__title-h2_small
-        text-align: center
-    .page__title-h3
-        text-align: center
-        font-size: 24px
-        line-height: 30px
-        margin-top: 10px
-        margin-bottom: 3%
-
-        +sm-block
-            font-size: 36px
-            line-height: 59px
-        +md-block
-            font-size: 36px
-            line-height: 59px
-        +lg-block
-            font-size: 36px
-            line-height: 59px
-    &::before, 
-    &::after
-        content: ''
-        transform: translate(-50%, -50%)
-        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
-        filter: blur(500px)
-        position: absolute
-        width: 0
-        height: 0
-
-        +sm-block
-            width: 497px
-            height: 497px
-        +md-block
-            width: 497px
-            height: 497px
-        +lg-block
-            width: 497px
-            height: 497px
-    &::before
-        bottom: 0
-        +sm-block
-            left: -25%
-        +md-block
-            left: -20%
-        +lg-block
-            left: -20%
-        
-        // bottom: -68%
-       
-    &::after
-        top: 43%
-        +sm-block
-            right: -85%
-        +md-block
-            right: -53%
-        +lg-block
-            right: -53%
-
-.accomplishmentsRowFlex 
-    +row-flex
-    justify-content: center
-
-.accomplishmentsItem
-    +col
-    +size(9)
-    +size-sm(5)
-    +size-md(3.6)
-    +size-lg(3.6)
-
-    text-align: center
-    padding-top: 11%
-    margin-bottom: 3%
-    &:nth-child(odd)
-        .accomplishmentsItemImg
-            +md-block
-                justify-content: flex-end
-                padding-right: 50px
-            +lg-block
-                justify-content: flex-end
-                padding-right: 50px
-    &:nth-child(even)
-        .accomplishmentsItemImg
-            +md-block
-                justify-content: flex-start
-                padding-left: 50px
-            +lg-block
-                justify-content: flex-start
-                padding-left: 50px
-
-.accomplishmentsItemImg
-    display: flex
-    margin-bottom: 50px
-    justify-content: center
-        
-.accomplishmentsItemTitle
-    font-family: #{$SFUIDisplay}-Bold
-    margin-bottom: 16px
-
-    font-size: 18px
-    line-height: 26px
-    +sm-block
-        font-size: 24px
-        line-height: 52px
-    +md-block
-        font-size: 24px
-        line-height: 52px
-    +lg-block
-        font-size: 24px
-        line-height: 52px
-
-.accomplishmentsItemDescription
-    color: #B2B2B2
-    font-size: 15px
-    line-height: 26px
-    letter-spacing: 0.02em
-.appBlock
-    padding: 60px 0 150px
-    .page__title-h3
-        font-size: 36px
-        line-height: 59px
-        margin-top: 2%
-
-.appBlockRowFlex
-    +row-flex
-
-.appBlockContainer
-    position: relative
-    display: flex
-    border-radius: 15px
-    background: #111111
-    backdrop-filter: blur(35px)
-    padding: 20% 5% 2% 8%
-    +sm-block
-        padding: 12% 5%
-    +md-block
-        padding: 6% 5%
-    +lg-block
-        padding: 6% 5%
-.appBlockText
-    +col
-    +size(9)
-    +size-md(4)
-    +size-lg(4)
-
-.appBlockIcons 
-    display: flex
-
-.appBlockDescription
-    margin-top: 32px
-    margin-bottom: 37px
-.appBlockIconsItem 
-    display: flex
-    font-size: 15px
-    line-height: 22px
-    font-family: #{$SFUIDisplay}-Bold
-.appBlockImg
-    position: absolute
-    right: -66px
-    top: -105px
-.appBlockIcon
-    margin-right: 20px
-.carSelector
-    padding: 60px 0 150px
-
-.carSelectorRowFlex
-    +row-flex
-
-.carSelectorContainer
-    position: relative
-    display: flex
-    border-radius: 15px
-    background: #111111
-    backdrop-filter: blur(35px)
-    margin-right: 3%
-
-
-.carSelectorImg
-    position: relative
-    left: -10%
-    top: 16%
-    // width: 76%
-    +size(9)
-    +size-md(7)
-    +size-lg(7)
-    +shift-md-right(-2.2)
-    +shift-lg-right(-2.2)
-
-
-.carSelectorIcons
-    +col
-    +size(9)
-    +size-md(3.5)
-    +size-lg(3.5)
-
-    padding-top: 7%
-    .page__btn
-        margin-top: 8%
-        margin-left: 6%
-        margin-bottom: 2%
-
-.carSelectorIconsItem 
-    display: flex
-    margin-bottom: 6%
-    &__Icon 
-        margin-right: 28px
-    &__Text
-        padding-top: 2%
-
-.carSelectorTextAfter
-    font-family: #{$SFUIDisplay}-Bold
-    font-size: 14px
-    line-height: 59px
-    color: #B2B2B2
-    text-transform: uppercase
-    text-align: center
-
 .howitworkChip
     padding: 60px 0
     .page__title-h2_small
@@ -3066,6 +2977,224 @@ html
         justify-content: space-between
         span
             background: #54CA52
+
+.accomplishments
+    padding: 60px 0
+    position: relative
+    .page__title-h2_small
+        text-align: center
+    .page__title-h3
+        text-align: center
+        font-size: 24px
+        line-height: 30px
+        margin-top: 10px
+        margin-bottom: 3%
+
+        +sm-block
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            font-size: 36px
+            line-height: 59px
+    &::before, 
+    &::after
+        content: ''
+        transform: translate(-50%, -50%)
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+        position: absolute
+        width: 0
+        height: 0
+
+        +sm-block
+            width: 497px
+            height: 497px
+        +md-block
+            width: 497px
+            height: 497px
+        +lg-block
+            width: 497px
+            height: 497px
+    &::before
+        bottom: 0
+        +sm-block
+            left: -25%
+        +md-block
+            left: -20%
+        +lg-block
+            left: -20%
+        
+        // bottom: -68%
+       
+    &::after
+        top: 43%
+        +sm-block
+            right: -85%
+        +md-block
+            right: -53%
+        +lg-block
+            right: -53%
+
+.accomplishmentsRowFlex 
+    +row-flex
+    justify-content: center
+
+.accomplishmentsItem
+    +col
+    +size(9)
+    +size-sm(5)
+    +size-md(3.6)
+    +size-lg(3.6)
+
+    text-align: center
+    padding-top: 11%
+    margin-bottom: 3%
+    &:nth-child(odd)
+        .accomplishmentsItemImg
+            +md-block
+                justify-content: flex-end
+                padding-right: 50px
+            +lg-block
+                justify-content: flex-end
+                padding-right: 50px
+    &:nth-child(even)
+        .accomplishmentsItemImg
+            +md-block
+                justify-content: flex-start
+                padding-left: 50px
+            +lg-block
+                justify-content: flex-start
+                padding-left: 50px
+
+.accomplishmentsItemImg
+    display: flex
+    margin-bottom: 50px
+    justify-content: center
+        
+.accomplishmentsItemTitle
+    font-family: #{$SFUIDisplay}-Bold
+    margin-bottom: 16px
+
+    font-size: 18px
+    line-height: 26px
+    +sm-block
+        font-size: 24px
+        line-height: 52px
+    +md-block
+        font-size: 24px
+        line-height: 52px
+    +lg-block
+        font-size: 24px
+        line-height: 52px
+
+.accomplishmentsItemDescription
+    color: #B2B2B2
+    font-size: 15px
+    line-height: 26px
+    letter-spacing: 0.02em
+.appBlock
+    padding: 60px 0 150px
+    .page__title-h3
+        font-size: 36px
+        line-height: 59px
+        margin-top: 2%
+
+.appBlockRowFlex
+    +row-flex
+
+.appBlockContainer
+    position: relative
+    display: flex
+    border-radius: 15px
+    background: #111111
+    backdrop-filter: blur(35px)
+    padding: 20% 5% 2% 8%
+    +sm-block
+        padding: 12% 5%
+    +md-block
+        padding: 6% 5%
+    +lg-block
+        padding: 6% 5%
+.appBlockText
+    +col
+    +size(9)
+    +size-md(4)
+    +size-lg(4)
+
+.appBlockIcons 
+    display: flex
+
+.appBlockDescription
+    margin-top: 32px
+    margin-bottom: 37px
+.appBlockIconsItem 
+    display: flex
+    font-size: 15px
+    line-height: 22px
+    font-family: #{$SFUIDisplay}-Bold
+.appBlockImg
+    position: absolute
+    right: -66px
+    top: -105px
+.appBlockIcon
+    margin-right: 20px
+.carSelector
+    padding: 60px 0 150px
+
+.carSelectorRowFlex
+    +row-flex
+
+.carSelectorContainer
+    position: relative
+    display: flex
+    border-radius: 15px
+    background: #111111
+    backdrop-filter: blur(35px)
+    margin-right: 3%
+
+
+.carSelectorImg
+    position: relative
+    left: -10%
+    top: 16%
+    // width: 76%
+    +size(9)
+    +size-md(7)
+    +size-lg(7)
+    +shift-md-right(-2.2)
+    +shift-lg-right(-2.2)
+
+
+.carSelectorIcons
+    +col
+    +size(9)
+    +size-md(3.5)
+    +size-lg(3.5)
+
+    padding-top: 7%
+    .page__btn
+        margin-top: 8%
+        margin-left: 6%
+        margin-bottom: 2%
+
+.carSelectorIconsItem 
+    display: flex
+    margin-bottom: 6%
+    &__Icon 
+        margin-right: 28px
+    &__Text
+        padding-top: 2%
+
+.carSelectorTextAfter
+    font-family: #{$SFUIDisplay}-Bold
+    font-size: 14px
+    line-height: 59px
+    color: #B2B2B2
+    text-transform: uppercase
+    text-align: center
 
 /*howitwork*/
 .howitwork
