--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -24,11 +24,24 @@
     height: 68px
     margin: 0 auto
     background: rgba(255, 255, 255, 0.15)
-    backdrop-filter: blur(35px)
+    
     border: 1.5px solid rgba(255, 255, 255, 0.15)
     box-sizing: border-box
     border-radius: 15px
     // padding: 20px 25px
+    position: relative
+   
+    &::after
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        backdrop-filter: blur(35px)
+        z-index: -1
+        border-radius: inherit
+
     .select
         font-size: 15px
         line-height: 29px
@@ -40,7 +53,7 @@
     display: block
     width: 100%
     margin: 0 auto
-    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif
+    font-family: #{$SFUIText}-Regular
     font-size: 18px
     color: #fff
 
@@ -112,7 +125,6 @@
 
         // background: rgba(255, 255, 255, 0.15)
         background: #000
-        backdrop-filter: blur(35px)
         border: 1.5px solid rgba(255, 255, 255, 0.15)
      
 
