--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1291,30 +1291,37 @@ html
             z-index: 10
 
 .modalCarCantfind 
+    padding: 60px 70px
     text-align: center
+
     .page__btn
         color: #000
+
     p
         font-family: #{$SFUIDisplay}-Bold
         font-size: 18px
         line-height: 59px
-    form 
-        margin-bottom: 10%
+
+
     .formRow
-        +row-flex
+        display: flex
         align-items: center
         margin-bottom: 5%
-    img 
-        margin: 0
+    .modalContent
+        img 
+            margin: 0
 
     .page__input
-        +col
-        +size(9)
-        +size-md(2)
-        +size-lg(2)
+        margin: 0 10px
+        width: 100%
+        max-width: 109px
+        &::placeholder
+            color: #B2B2B2
         &:first-child
-            flex-grow: 1
+            max-width: 370px
 
+    .modalTitle
+        margin: 0
 
 .modalContent
     overflow: scroll
@@ -2401,11 +2408,24 @@ html
     height: 68px
     margin: 0 auto
     background: rgba(255, 255, 255, 0.15)
-    backdrop-filter: blur(35px)
+    
     border: 1.5px solid rgba(255, 255, 255, 0.15)
     box-sizing: border-box
     border-radius: 15px
     // padding: 20px 25px
+    position: relative
+   
+    &::after
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        backdrop-filter: blur(35px)
+        z-index: -1
+        border-radius: inherit
+
     .select
         font-size: 15px
         line-height: 29px
@@ -2417,7 +2437,7 @@ html
     display: block
     width: 100%
     margin: 0 auto
-    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif
+    font-family: #{$SFUIText}-Regular
     font-size: 18px
     color: #fff
 
@@ -2489,7 +2509,6 @@ html
 
         // background: rgba(255, 255, 255, 0.15)
         background: #000
-        backdrop-filter: blur(35px)
         border: 1.5px solid rgba(255, 255, 255, 0.15)
      
 
