--- a/src/components/products/products.mixin.pug
+++ b/src/components/products/products.mixin.pug
@@ -13,7 +13,7 @@
 mixin item(items)
     each item in items
         .productsItem
-            h3.productsItemTitle=item.titel
+            h3.productsItemTitle=item.title
             p.productsItemTextBefore=item.textBefore
             img.productsItemImg(src=item.imgSrc, alt="product")
 
