--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,10 +4,10 @@ block content
 	main.page.mainPage
 		include ../components/banner/banner.component.pug
 		include ../components/products/products.component.pug
-		include ../components/faq/faq.component.pug
-		include ../components/news/news.component.pug
-		include ../components/social/social.component.pug
-		include ../components/gallary/gallary.component.pug
+		//- include ../components/faq/faq.component.pug
+		//- include ../components/news/news.component.pug
+		//- include ../components/social/social.component.pug
+		//- include ../components/gallary/gallary.component.pug
 block modals
 	include ../components/modals/modalsMainPage.component.pug
 	
