--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -5,10 +5,11 @@ section.banner
                 h1.page__title-h1_big POWER
                 h1.page__title-h1
                     span More power     
-                    | for your car with RSCHIP
+                    | for 
+                    span.block your car with RSCHIP
                 p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
                 include ../socialIcons/socialIcons.component.pug
-            .bannerImg
+            .bannerImgTwo
                 picture 
                     source(type="image/png" srcset="assets/images/png/imgBanner1-lg.png" media="(min-width: 992px)")
                     source( type="image/png" srcset="assets/images/png/imgBanner1-md.png" media="(min-width: 768px)")
