--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -2,11 +2,12 @@
 .banner
     position: relative
     // overflow: hidden
-    
+    max-height: 768px
     .page__title-h1
        
         margin-top: 46px
         width: 85%
+        padding-left: 1%
         +sm-block
             margin-top: 28px
             width: 78%
@@ -16,8 +17,11 @@
             width: 100%
          
         &_big
-            +shift-md-right(-12)
-            +shift-lg-right(-12)
+            // +shift-md-right(-12)
+            // +shift-lg-right(-12)
+        span.block
+            display: block
+            color: #fff
             
     .pageText
         
@@ -34,11 +38,11 @@
             margin-bottom: 66px
         +md-block
             margin-bottom: 0
-            position: absolute
+            // position: absolute
             bottom: 83px
         +lg-block
             margin-bottom: 0
-            position: absolute
+            // position: absolute
             bottom: 83px
     &.bannerRs
         .page__title-h1
@@ -61,13 +65,30 @@
 .bannerFlexContainer
     +row-flex()
     // align-items: center
-    // height: 769px
+    height: 768px
+
+.bannerImgTwo
+    position: absolute
+    top: 0
+    left: 34vw
+    //1920
+    // left: 45.5vw
+    left: 42.5vw
+    // 1440
+    // transform: scale(1.1)
+    // 1920
+    transform: scale(1.3)
+
+    img
+        
 .bannerText
     +col()
     +size(9)
-    +size-md(3)
-    +size-lg(2.8)
-    background: #000
+    // +size-md(3)
+    // +size-lg(2.8)
+    +size-md(5)
+    +size-lg(5)
+    // background: #000
     position: relative
     z-index: 1
     padding-top: 60px
