--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -11,6 +11,8 @@ section.banner
                 include ../socialIcons/socialIcons.component.pug
             .bannerImgTwo
                 picture 
+                    source(type="image/png" srcset="assets/images/png/imgBanner_1920.png" media="(min-width: 1441px)")
+                    source(type="image/png" srcset="assets/images/png/imgBanner_1440.png" media="(min-width: 1440px)")
                     source(type="image/png" srcset="assets/images/png/imgBanner1-lg.png" media="(min-width: 992px)")
                     source( type="image/png" srcset="assets/images/png/imgBanner1-md.png" media="(min-width: 768px)")
                     img(src="assets/images/png/imgBanner1-xs.png", alt="imgBanner1-xs")
