--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -25,8 +25,8 @@
   +font($SFUIText, #{$SFUIText}-Bold)
 
 html
-  scrollbar-color: #ff3a3a #fff
-  scrollbar-width: thin
+  // scrollbar-color: #ff3a3a #fff
+  // scrollbar-width: thin
 
 body
   font-family: $fontRegular
