--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -2,7 +2,7 @@
 .banner
     position: relative
     // overflow: hidden
-    max-height: 768px
+    // max-height: 768px
     .page__title-h1
        
         margin-top: 46px
@@ -65,20 +65,27 @@
 .bannerFlexContainer
     +row-flex()
     // align-items: center
-    height: 768px
+    
+    position: relative
 
 .bannerImgTwo
-    position: absolute
-    top: 0
-    left: 34vw
-    //1920
-    // left: 45.5vw
-    left: 42.5vw
-    // 1440
-    // transform: scale(1.1)
-    // 1920
-    transform: scale(1.3)
+    display: flex
+    width: 100%
+    height: 100%
+    max-height: 768px
 
+    +md-block
+        position: absolute
+        top: 0
+        left: 31%
+
+    +lg-block
+        position: absolute
+        top: 0
+        left: 31%
+
+    picture
+        display: flex
     img
         
 .bannerText
@@ -89,6 +96,7 @@
     +size-md(5)
     +size-lg(5)
     // background: #000
+   
     position: relative
     z-index: 1
     padding-top: 60px
@@ -96,11 +104,13 @@
         padding-left: 63px
     +md-block
         padding-left: 0
+        height: 768px
     +lg-block
         padding-left: 0
+        height: 768px
 .bannerImg
     // +col()
-    max-height: 770px
+   
     width: 100%
     +size-md(9)
     +size-lg(9)
